# dashborges

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker-manage.sh  main.py  pyproject.toml  run_app.py
.github/instructions/: release-notes-writing.instructions.md
.github/prompts/: generate-release-notes.prompt.md
src/dashborges/: api.py  api_client.py  dashborges.py  data_handler.py  database.py  ui_components.py  utils.py  visualizations.py
